--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
+  "homepage": "https://github.com/saitejasri1/personal-portfolio",
   "scripts": {
     "dev": "tsx server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
